Changelog
=========

1.2 (unreleased)
----------------

* Fix regression from 1.1, wherein text fields would get transformed to HTML
  and then erroneously escaped.
  [davisagli]

1.1 (2010-02-18)
----------------

* Make sure collective.jqueryui's ZCML is loaded.
  [davisagli]

* Added custom import handler to set the add_view_expr on the Action Letter
  FTI in Plone 4. Also an update step to add this when upgrading from Plone
  3 to Plone 4.
  [davisagli]

* Workaround for change in the utranslate function in Plone 4 (or possibly
  just me misusing it before).
  [davisagli]

* Workaround for Zope interface changes in the Plone 4-compatible version of
  PloneFormGen.
  [davisagli]

* When creating Leads in Salesforce, default to setting the Lead Source to
  'Web'. (Requires salesforcepfgadpater >= 1.6b2).
  [davisagli]

* Use the htmlValue method of form fields to process the values in the request
  before rendering a letter.  This makes it possible to set the values that
  will be displayed for a boolean field, for example.
  [davisagli]

1.0 (2009-11-11)
----------------

* No longer artificially restrict to z3c.form <2.0, as that is a deployment
  decision.  Plone 3 users may need to pin z3c.form to version 1.9.0 or add
  additional fake eggs to avoid pulling in new zope.* packages.
  [davisagli]

* Only depend on plone.app.jquerytools, not Products.pipbox.
  [davisagli]

* Fixed issue with loading thank you page text when revisiting the wizard.
  [davisagli]

1.0rc1 (2009-8-26)
------------------

* Added options for configuring the thank you page message or an alternative
  thank you page URL.
  [davisagli]

* Fixed portlet link to view saved letters.
  [davisagli]

* Decode request variables before using them in dollarString substitutions,
  to avoid UnicodeDecodeErrors when casting the strings for interpolation.
  [davisagli]

* Decode UTF-8 values from Archetypes before passing them to z3c.form, to