@@ -4,6 +4,10 @@ Changelog
 1.2 (unreleased)
 ----------------
 
+* Increase the height of the default field for text fields in the form field
+  wizard step.
+  [davisagli]
+
 * Fix regression from 1.1, wherein text fields would get transformed to HTML
   and then erroneously escaped.
   [davisagli]
